RESOLVED FIXED87358
[Qt] Tiles not painted after wheel or keyboard scroll
https://bugs.webkit.org/show_bug.cgi?id=87358
Summary [Qt] Tiles not painted after wheel or keyboard scroll
Allan Sandfeld Jensen
Reported 2012-05-24 02:15:22 PDT
When scrolling to new areas using mouse-wheel or keyboard the new areas are often unpainted until the minibrowser is resized, or panned using touch.
Attachments
Patch (1.62 KB, patch)
2012-05-24 02:18 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-05-24 02:18:03 PDT
WebKit Review Bot
Comment 2 2012-05-24 03:17:50 PDT
Comment on attachment 143769 [details] Patch Clearing flags on attachment: 143769 Committed r118342: <http://trac.webkit.org/changeset/118342>
WebKit Review Bot
Comment 3 2012-05-24 03:18:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.