[Qt] Tiles not painted after wheel or keyboard scroll. https://bugs.webkit.org/show_bug.cgi?id=87358

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-05-24
Reviewed by Kenneth Rohde Christiansen.

After performing a scroll requested from the WebProcess we also need
to inform the painting layer of the viewport change.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::pagePositionRequest):

Canonical link: https://commits.webkit.org/105111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118342 268f45cc-cd09-0410-ab3c-d52691b4dbfc